更新 MixedG2P-T5 链接

--- a/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
+++ b/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
@@ -35,8 +35,8 @@ Our model matches the performance of conventional G2P-based text-to-speech syste
 ## 1·Introduction: 摘要
 
 Speech synthesis refers to the technology by which machines automatically generate speech audio signals and is commonly known as text-to-speech (TTS).
-With the advancement of deep learning, speech synthesis models have demonstrated performance that significantly surpasses traditional methods [^Borgholt2022Brief].
-These models typically convert input text into acoustic feature vectors through an encoder, and subsequently generate Mel-spectrograms using techniques such as attention mechanisms or variational inference, which are then transformed into speech by a vocoder (**Tacotron2**[^Shen2018Natural], **VITS**[^Kim2021Conditional]).
+With the advancement of deep learning, speech synthesis models have demonstrated performance that significantly surpasses traditional methods (****Survey20220301**[^Borgholt2022Brief]).
+These models typically convert input text into acoustic feature vectors through an encoder, and subsequently generate Mel-spectrograms using techniques such as attention mechanisms or variational inference, which are then transformed into speech by a vocoder (**Tacotron2**[^Shen2017Tacotron2], **VITS**[^Kim2021VITS]).
 The model learns the correspondence between audio samples and their respective “input representations.”
 
 Constructing such deep learning-based speech synthesis systems requires accurately labeled data corresponding to spoken utterances.
@@ -74,17 +74,17 @@ To address the aforementioned challenges in speech synthesis—particularly the 
 Unlike conventional phoneme representations, these discrete tokens encode not only linguistic and semantic content, but also speaker-specific paralinguistic features such as accentuation, intonation, and prosody.
 This rich and compact representation is especially advantageous because it avoids the information loss typically incurred during the intermediate conversion of speech into text.
 
-A prominent framework that leverages this representation for speech synthesis is the **Generative Spoken Language Model (GSLM)**[^Lakhotia2021On].
+A prominent framework that leverages this representation for speech synthesis is the **Generative Spoken Language Model (GSLM)**[^Lakhotia2021GSLM].
 GSLM establishes a three-stage pipeline:
 (1) an encoder that converts the input speech waveform into a sequence of discrete symbols via quantized SSL embeddings,
 (2) an optional unsupervised language model (uLM) that captures long-range dependencies across the symbol sequence,
 (3) a decoder that reconstructs the speech waveform from the symbolic input.
 
-Encoders such as **Wav2Vec2.0**[^Baevski2020Wav2vec] and **HuBERT**[^Hsu2021Hu{BERT] are commonly employed, offering robust and generalizable speech representations.
+Encoders such as **Wav2Vec2.0**[^Baevski2020Wav2Vec2.0] and **HuBERT**[^Hsu2021HuBERT] are commonly employed, offering robust and generalizable speech representations.
 These discrete tokens act as a learned alternative to phonemes or graphemes, forming a flexible intermediate layer between raw audio and synthesis.
 
 As depicted in Figure.01(a), the encoder module transforms the continuous speech signal into a compressed symbolic form using a k-means clustering layer trained on SSL features.
-The decoder module, typically a neural vocoder or sequence-to-sequence model such as **Tacotron2**[^Shen2018Natural], learns to reconstruct the speech waveform from these symbolic representations.
+The decoder module, typically a neural vocoder or sequence-to-sequence model such as **Tacotron2**[^Shen2017Tacotron2], learns to reconstruct the speech waveform from these symbolic representations.
 Interestingly, it has been demonstrated (Figure.01(b)) that this symbolic representation is not strictly language-specific: once the encoder-decoder pipeline is trained on one language, it can be transferred to other languages through fine-tuning, enabling zero-shot or low-resource language synthesis.
 This cross-lingual transferability opens the door to G2P-free synthesis across many languages, even those lacking well-defined phonemic resources.
 
@@ -101,16 +101,16 @@ In this work, we extend this idea by using the encoder of GSLM not only for deco
 The goal is to replace the G2P module with a learned mapping from text, which may contain mixed scripts, such as Kanji and Kana in Japanese, to symbolic tokens that function analogously to phonemes.
 Once these pseudo-language labels are predicted, they can be fed into the spectral predictor to produce natural-sounding synthesized speech.
 
-The pseudo-language label predictor is built on top of the **T5** architecture[^Raffel2019Exploring], a powerful Transformer-based sequence-to-sequence model known for its success in a wide range of natural language processing tasks.
+The pseudo-language label predictor is built on top of the **T5** architecture[^Raffel2019T5], a powerful Transformer-based sequence-to-sequence model known for its success in a wide range of natural language processing tasks.
 T5’s encoder-decoder structure allows it to handle inputs and outputs of varying lengths, making it suitable for converting raw text into sequences of symbolic labels.
 Moreover, T5 is pretrained on a massive multilingual corpus, which equips it with broad linguistic understanding and generalization capabilities.
 In our setting, it enables the conversion of Japanese text—including diverse orthographic patterns—to meaningful discrete symbol sequences.
 The architecture of this label predictor is illustrated in Figure.02.
 By leveraging this T5-based predictor, we eliminate the need for hand-crafted phoneme dictionaries, morphological analyzers, or accent dictionaries typically required in G2P pipelines.
 
-While prior studies have explored the use of T5 for grapheme-to-phoneme conversion tasks, they remain constrained to alphabetic scripts and conventional G2P paradigms ([^Řezáčková2021T5g2p], **SpeechT5**[^Ao2022SpeechT5]).
+While prior studies have explored the use of T5 for grapheme-to-phoneme conversion tasks, they remain constrained to alphabetic scripts and conventional G2P paradigms (**T5G2P**[^Rezackova2021T5G2P], **SpeechT5**[^Ao2021SpeechT5]).
 Specifically, their work assumes a clear one-to-one correspondence between characters and phonemes, and does not address the combined demonstration of mixed-script languages.
-Also, multilingual G2P systems have also been proposed, but they still operate within a text-based inference thus does not have additional prosodic features essential for natural-sounding speech synthesis, such as accents and durations, that can be obtained from SSL models ([^Sokolov2019Neural], [^Vesik2020One], [^Zhu2022ByT5]).
+Also, multilingual G2P systems have also been proposed, but they still operate within a text-based inference thus does not have additional prosodic features essential for natural-sounding speech synthesis, such as accents and durations, that can be obtained from SSL models ([^Sokolov2019Neural], [^Vesik2020One], **CharsiuG2P**[^Zhu2022CharsiuG2P]).
 
 Therefore, this study demonstrate a fully G2P-free speech synthesis pipeline that leverages SSL-derived tokens and a T5-based pseudo-language label predictor to handle the structural and phonological intricacies of mixed-script languages, such as Japanese kanji and kana.
 
@@ -145,14 +145,14 @@ The pseudo-language label predictor is trained on Japanese utterances using a T5
 > -->
 > | Language | G2P | Language-Specific Pseudo-Language Label Predictor | Spectral Predictor |
 > | --- | --- | --- | --- |
-> | Japanese | [OpenJTalk](https://open-jtalk.sp.nitech.ac.jp/) + [Mecab](http://taku910.github.io/mecab/) + Marine [^park22b_interspeech] | Reazonspeech [^reasonspeech] (**T5**[^Raffel2019Exploring] Pre-training)<br>JSUT [^abs-1711-00354] JVS [^abs-1908-06248] JKAC [^jkac] JMAC [^TakamichiNTS22] JSSS [^abs-2010-01793] (Fine-tuning for K-means/T5)<br> [tohoku-BERTv3-tokenizer](https://huggingface.co/tohoku-nlp/bert-base-japanese-v3) (T5 Tokenizer) | JSUT [^abs-1711-00354]
+> | Japanese | [OpenJTalk](https://open-jtalk.sp.nitech.ac.jp/) + [Mecab](http://taku910.github.io/mecab/) + **MARINE** [^Park2022MARINE] | **ReazonSpeech**[^Yin2023ReazonSpeech] (**T5**[^Raffel2019T5] Pre-training)<br>**JSUT**[^Sonobe2017JSUT] **JVS**[^Takamichi2019JVS] **J-KAC**[^Nakata2021J-KAC] **J-MAC**[^Takamichi2022J-MAC] **JSSS**[^Takamichi2020JSSS] (Fine-tuning for K-means/T5)<br> [tohoku-BERTv3-tokenizer](https://huggingface.co/tohoku-nlp/bert-base-japanese-v3) (T5 Tokenizer) | **JSUT** [^Sonobe2017JSUT] |
 >
 > <a id="tab.01">Table.01: Datasets used for training, fine-tuning, and applying each model</a>
 
 Oracle and the proposed method both employ the GSLM architecture enhanced with speaker embedding capabilities using **ContentVec**[^Qian2022ContentVec], an SSL model known for effectively capturing speaker characteristics.
 The SSL and k-means models were fine-tuned on a Japanese speech corpus, resulting in a model capable of outputting 500 discrete tokens.
 In both cases, a preprocessing step was applied to remove repeated symbols from the pseudo-language label sequences.
-The spectral predictor used to generate synthesized speech from the common input representations is **FastSpeech2**[^Ren2020FastSpeech].
+The spectral predictor used to generate synthesized speech from the common input representations is **FastSpeech2**[^Ren2020FastSpeech2].
 **FastSpeech2** has the advantage of being able to additionally control speech characteristics through duration, pitch, and accent information, in addition to textual inputs.
 The model is trained to predict Mel-spectrograms from input text, which are then converted to speech using a vocoder under the same conditions.
 
@@ -177,7 +177,7 @@ Then, we evaluate the synthesized speech generated via the spectral predictor.
 
 To assess the impact of each input representation on linguistic intelligibility, we analyzed error rates with respect to the target language.
 For the discrete symbols, we compared the pseudo-language labels predicted by the label predictor with those obtained from the original audio via the SSL model, and calculated the Unit Error Rate (UER).
-For the synthesized speech, we used the **Whisper**-base[^Radford2022Robust] ASR model and compared its output with the reference transcription, calculating the Character Error Rate (CER) in Japanese.
+For the synthesized speech, we used the **Whisper**-base[^Radford2022Whisper] ASR model and compared its output with the reference transcription, calculating the Character Error Rate (CER) in Japanese.
 
 [Table.02](#tab.02) shows the UER and CER scores.
 While UER did not show large differences compared to prior experiments, prediction errors were still observed in the label predictor.
@@ -186,7 +186,7 @@ This suggests that synthesis errors are more heavily influenced by the spectral 
 
 ### Evaluation of Naturalness
 
-We employed the pretrained **UTMOS** model[^Saeki2022Utmos] for this evaluation.
+We employed the pretrained **UTMOS** model[^Saeki2022UTMOS] for this evaluation.
 UTMOS is a model trained to predict Mean Opinion Scores (MOS) for multilingual synthetic speech in an automated fashion.
 Since it operates without comparison to reference audio, it can be used to assess absolute linguistic and paralinguistic qualities, though it cannot capture comparative variations between ground truth and synthesized audio.
 
@@ -201,7 +201,7 @@ Next, we evaluated the overall acoustic quality of the synthesized speech.
 Given that input representations are compressed speech features, they can be viewed as analogous to neural audio codecs.
 Thus, we treated the speech synthesis system as a single transmission pipeline and evaluated the output speech as a degraded version of a reference signal.
 
-For this purpose, we employed **WARP-Q**[^Jassim2022Speech], which is robust to common codec-related distortions and compensates internally for temporal misalignments between the ground truth and resynthesized signals—issues often encountered with metrics like **PESQ**[^Rix2001Perceptual], which can be sensitive to speaker identity and speech type.
+For this purpose, we employed **WARP-Q**[^Jassim2022WARP-Q], which is robust to common codec-related distortions and compensates internally for temporal misalignments between the ground truth and resynthesized signals—issues often encountered with metrics like **PESQ**[^Rix2001PESQ], which can be sensitive to speaker identity and speech type.
 
 We also assessed audio quality in terms of noise contamination using the Signal Distortion Rate (SDR), a metric typically used in source separation.
 SDR is suitable here as it quantifies the degree of noise in the synthesized audio relative to the original input.
@@ -221,40 +221,40 @@ For the language label predictor, we utilized a Japanese tokenizer pretrained on
 However, to support multilingual settings, it is necessary to explore alternative tokenizers such as Byte-Pair Encoding (BPE) tokenizers that do not rely on language-specific training.
 For the spectral predictor, additional acoustic features—such as accentual information—should be integrated alongside the four currently used features.
 
-From an evaluation perspective, it is also necessary to individually assess the contributions of each input factor (e.g., duration, pitch) fed into FastSpeech 2.
+From an evaluation perspective, it is also necessary to individually assess the contributions of each input factor (e.g., duration, pitch) fed into **FastSpeech2**.
 Moreover, a broader and more diverse test dataset would allow for a more comprehensive and generalized analysis.
 
 As future directions, we plan to conduct experiments on multilingual datasets to investigate the language dependency of the language label predictor.
 In order to minimize such dependency, we intend to explore strategies that avoid language-specific preprocessing.
-One possible solution is to convert raw text into language-aware discrete tokens using tokenizers such as **mT5**[^Linting2021MT5] or **ByT5**[^Linting2021ByT5], which tokenize text based on Unicode character strings.
+One possible solution is to convert raw text into language-aware discrete tokens using tokenizers such as **mT5**[^Xue2020mT5] or **ByT5**[^Xue2021ByT5], which tokenize text based on Unicode character strings.
 These models are capable of performing tokenization while preserving minimal language-specific biases, thus enabling scalable and robust evaluation across a wider range of multilingual scenarios.
 
 ## References
 
-[^Borgholt2022Brief]: A Brief Overview of Unsupervised Neural Speech Representation Learning. CoRR 2022.
-[^Shen2018Natural]: Natural {TTS} Synthesis by Conditioning {W}avenet on MEL-Spectrogram Predictions. 2018 {IEEE} International Conference on Acoustics, Speech and Signal Processing 2018.
-[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. Proceedings of the 38th International Conference on Machine Learning 2021.
-[^Lakhotia2021On]: On Generative Spoken Language Modeling From Raw Audio. Transactions of the Association for Computational Linguistics 2021.
-[^Baevski2020Wav2vec]: Wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations. Advances in Neural Information Processing Systems 2020.
-[^Hsu2021Hu{BERT]: Hu{BERT}: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
-[^park22b_interspeech]: Marine: A Unified Accent Estimation Method Based on Multi-Task Learning for Japanese Text-to-Speech
-[^reasonspeech]: ReazonSpeech: A free and massive corpus for Japanese ASR
-[^Raffel2019Exploring]: Exploring the Limits of Transfer Learning With a Unified Text-to-Text Transformer. J. Mach. Learn. Res. 2019.
-[^abs-1908-06248]: JVS corpus: free Japanese multi-speaker voice corpus
-[^abs-1711-00354]: JSUT corpus: free large-scale Japanese speech corpus for end-to-end speech synthesis
-[^jkac]: JKAC: Audiobook Speech Synthesis Conditioned by Cross-Sentence Context-Aware Word Embeddings
-[^TakamichiNTS22]: JMAC: Japanese multi-speaker audiobook corpus for speech synthesis
-[^abs-2010-01793]: JSSS: free Japanese speech corpus for summarization and simplification
-[^Řezáčková2021T5g2p]: T5G2P: Using Text-to-Text Transfer Transformer for Grapheme-to-Phoneme Conversion. Interspeech 2021 2021.
-[^Ao2022SpeechT5]: {S}peech{T}5: Unified-Modal Encoder-Decoder Pre-Training for Spoken Language Processing. Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics 2022.
-[^Sokolov2019Neural]: Neural Machine Translation for Multilingual Grapheme-to-Phoneme Conversion. Interspeech 2019 2019.
-[^Vesik2020One]: One Model to Pronounce Them All: Multilingual Grapheme-to-Phoneme Conversion With a Transformer Ensemble. Proceedings of the 17th SIGMORPHON Workshop on Computational Research in Phonetics, Phonology, and Morphology 2020.
-[^Zhu2022ByT5]: ByT5 Model for Massively Multilingual Grapheme-to-Phoneme Conversion. Interspeech 2022 2022.
-[^Qian2022ContentVec]: {C}ontent{V}ec: An Improved Self-Supervised Speech Representation by Disentangling Speakers. Proceedings of the 39th International Conference on Machine Learning 2022.
-[^Ren2020FastSpeech]: FastSpeech 2: Fast and High-Quality End-to-End Text to Speech. ArXiv.
-[^Radford2022Robust]: Robust Speech Recognition via Large-Scale Weak Supervision..
-[^Saeki2022Utmos]: UTMOS: UTokyo-SaruLab System for Voice MOS Challenge 2022. Interspeech 2022 2022.
-[^Jassim2022Speech]: Speech Quality Assessment With {WARP-Q}: From Similarity to Subsequence Dynamic Time Warp Cost. IET Signal Processing 2022.
-[^Rix2001Perceptual]: Perceptual Evaluation of Speech Quality ({PESQ})-a New Method for Speech Quality Assessment of Telephone Networks and Codecs. 2001 IEEE International Conference on Acoustics, Speech, and Signal Processing 2001.
-[^Linting2021MT5]: MT5: A Massively Multilingual Pre-Trained Text-to-Text Transformer. Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics 2021.
-[^Linting2021ByT5]: ByT5: Towards a Token-Free Future With Pre-Trained Byte-to-Byte Models. Tacl 2022 2021.
+[^Borgholt2022Brief]: [**Survey20220301**: A Brief Overview of Unsupervised Neural Speech Representation Learning](../../Surveys/2022.03.01_Borgholt2022Brief.md). ArXiv:2203.01829/AAAI(SAS).
+[^Shen2017Tacotron2]: [**Tacotron2**: Natural TTS Synthesis by Conditioning WaveNet on Mel Spectrogram Predictions](../Acoustic/2017.12.16_Tacotron2.md). ArXiv:1712.05884/ICASSP2018.
+[^Kim2021VITS]: [**VITS**: Conditional Variational Autoencoder with Adversarial Learning for End-to-End Text-to-Speech](../E2E/2021.06.11_VITS.md). ArXiv:2106.06103/ICML2021.
+[^Lakhotia2021GSLM]: [**GSLM**: On Generative Spoken Language Modeling from Raw Audio](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md). ArXiv:2102.01192/TACL2021.
+[^Baevski2020Wav2Vec2.0]: [**Wav2Vec 2.0**: A Framework for Self-Supervised Learning of Speech Representations](../Tokenizers/2020.06.20_Wav2Vec2.0.md). ArXiv:2006.11477/NeurIPS2020.
+[^Hsu2021HuBERT]: [**HuBERT**: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units](../Tokenizers/2021.06.14_HuBERT.md). ArXiv:2106.07447/TASLP2021.
+[^Park2022MARINE]: [**MARINE**: A Unified Accent Estimation Method Based on Multi-Task Learning for Japanese Text-to-Speech](../_Basis/2022.09.18_MARINE.md). InterSpeech2022.
+[^Yin2023ReazonSpeech]: [**ReazonSpeech**: A Free and Massive Corpus for Japanese ASR](../../Datasets/2023.03.00_ReazonSpeech.md). Japanese ANLP2023.
+[^Raffel2019T5]: [**T5**: Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer](../TextLM/2019.10.23_T5.md). ArXiv:1910.10683/JMLR2020.
+[^Takamichi2019JVS]: [**JVS Corpus**: Free Japanese Multi-Speaker Voice Corpus](../../Datasets/2019.08.17_JVS.md). ArXiv:1908.06248.
+[^Sonobe2017JSUT]: [**JSUT Corpus**: Free Large-Scale Japanese Speech Corpus for End-to-End Speech Synthesis](../../Datasets/2017.10.28_JSUT.md). ArXiv:1711.00354.
+[^Nakata2021J-KAC]: [**J-KAC**: Audiobook Speech Synthesis Conditioned by Cross-Sentence Context-Aware Word Embeddings](../../Datasets/2021.08.26_J-KAC.md). ISCA SSW2021.
+[^Takamichi2022J-MAC]: [J-MAC: Japanese Multi-Speaker Audiobook Corpus for Speech Synthesis](../../Datasets/2022.01.26_J-MAC.md). ArXiv:2201.10896/InterSpeech2022.
+[^Takamichi2020JSSS]: [**JSSS**: Free Japanese Speech Corpus for Summarization and Simplification](../../Datasets/2020.10.05_JSSS.md). ArXiv:2010.01793.
+[^Rezackova2021T5G2P]: [**T5G2P**: Using Text-to-Text Transfer Transformer for Grapheme-to-Phoneme Conversion](../G2P/2021.08.30_T5G2P.md). InterSpeech2021.
+[^Ao2021SpeechT5]: [**SpeechT5**: Unified-Modal Encoder-Decoder Pre-Training for Spoken Language Processing](../SpeechLM/ST2ST/2021.10.14_SpeechT5.md). ArXiv:2110.07205.
+[^Sokolov2019Neural]: [Neural Machine Translation for Multilingual Grapheme-to-Phoneme Conversion](../G2P/2020.06.25_Sokolov2020Neural.md). ArXiv:2006.14194/InterSpeech2019.
+[^Vesik2020One]: [One Model to Pronounce Them All: Multilingual Grapheme-to-Phoneme Conversion With a Transformer Ensemble](../G2P/2020.06.23_Vesik2020One.md). ArXiv:2006.13343/SIGMORPHON2020.
+[^Zhu2022CharsiuG2P]: [**CharsiuG2P**: ByT5 Model for Massively Multilingual Grapheme-to-Phoneme Conversion](../G2P/2022.04.06_CharsiuG2P.md). ArXiv:2204.03067/InterSpeech2022.
+[^Qian2022ContentVec]: [**ContentVec**: An Improved Self-Supervised Speech Representation by Disentangling Speakers](../Tokenizers/2022.04.20_ContentVec.md). ArXiv:2204.09224.
+[^Ren2020FastSpeech2]: [**FastSpeech2**: Fast and High-Quality End-to-End Text-to-Speech](../Acoustic/2020.06.08_FastSpeech2.md). ArXiv:2006.04558/ICLR2021.
+[^Radford2022Whisper]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision](../-ASR/2022.12.06_Whisper.md). ArXiv:2212.04356/ICML2023.
+[^Saeki2022UTMOS]: [**UTMOS**: UTokyo-SaruLab System for VoiceMOS Challenge 2022](../../Evaluations/2022.04.05_UTMOS.md). ArXiv:2204.02152/InterSpeech2022.
+[^Jassim2022WARP-Q]: [**WARP-Q**: Quality Prediction for Generative Neural Speech Codecs](../../Evaluations/2021.02.20_WARP-Q.md). ArXiv:2102.10449/ICASSP2021.
+[^Rix2001PESQ]: [**PESQ**: Perceptual Evaluation of Speech Quality - A New Method for Speech Quality Assessment of Telephone Networks and Codecs](../../Evaluations/2001.05.07_PESQ.md). ICASSP2001.
+[^Xue2020mT5]: [**mT5**: A Massively Multilingual Pre-Trained Text-to-Text  Transformer](../TextLM/2020.10.22_mT5.md). ArXiv:2010.11934/NAACL2021.
+[^Xue2021ByT5]: [**ByT5**: Towards a Token-Free Future with Pre-Trained Byte-to-Byte Models](../TextLM/2021.05.28_ByT5.md). ArXiv:2105.13626/TACL2022.
