--- a/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
+++ b/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
@@ -178,3 +178,44 @@ With respect to NAC-based tokens, Liu et al.~\cite{liu2024visual} identified the
 To address this, they introduced robust instruction-tuning strategies to enhance the consistency of tokens across different contexts, thereby improving the reliability of systems. 
 
 \vspace{-2mm}
+
+## 3·Experimental Setup
+
+Despite the above analyses, the question of whether NAC tokens inherit linguistic properties, such as statistical regularities or syntactic structures, remains underexplored.
+
+We thus aim to fill this gap by systematically analysing NAC token sequences to investigate their adherence to known linguistic properties and to clarify the relationships between speech metrics and linguistic structure in speech tokenization.
+
+<a id="tab:nac_models">Codec configuration comparison. "A--F'' represents different NAC models, where "A'' is SpeechTokenizer~\cite{zhang2023speechtokenizer}, "B$\sim$'' is AcademiCodec~\cite{yang2023hifi}, "C'' is AudioDec~\cite{wu2023audiodec}, "D'' is DAC~\cite{kumar2023high}, "E$\sim$'' is EnCodec~\cite{defossez2023high}, and "F$\sim$'' is FunCodec~\cite{du2023funcodec}.  $n_d$ represents the dimension size, SR represents the sample rate.
+
+The contents of this table are partially cited from~\cite{wu2024audiolanguagemodeling}.</a>
+
+This study investigates whether speech tokens obtained from various NAC models exhibit statistical properties similar to those of natural language.
+
+For the NAC models, we adopt six open-source codec models, where each of these models was trained under distinct conditions, including differences in datasets and bitrates, resulting in a total of 15 unique codec configurations shown in Table ~[tab:nac_models](#tab:nac_models) for comparative analysis~\cite{wu2024audiolanguagemodeling}. 
+
+The extraction of token was conducted by the implementation of Codec-SUPERB~\cite{codecsuperb}.
+
+To ensure consistency across models, we employed a standardised procedure for token sequence extraction and preprocessing.
+
+The speech signal was fed into a pretrained NAC model to extract a speech token sequence using a uniform codebook size of 1,024 for each dimension.
+
+Each token represented a 20~ms segment of input speech.
+
+A deduplication process was also applied to eliminate consecutive repetitions of the same token, thereby preventing potential biases in the statistical analysis, particularly in $n$-gram distribution calculations.
+
+Furthermore, to account for differences in dimension sizes $n_d$ caused by varying codec configurations across NAC models, we implemented an adjustment procedure. 
+We treated each dimension of the NAC output as a separate token sequence and then concatenated them along with the time axis to create a single flattened token sequence. 
+However, because each dimension uses an independent codebook but shares the same label space (e.g., 0 to 1,023), naive flattening would cause label collisions that obscure the actual distribution patterns. 
+To resolve this, we offset each dimension’s token IDs by adding an index shift proportional to the dimension order (e.g., the first dimension uses IDs 0–1,023, the second uses 1,024–2,047, and so on).
+
+This effectively expands the overall codebook size while preserving the uniqueness of tokens across dimensions.
+
+Additionally, we prepared extra tokens that represented "dimension start'' and "dimension end'' and concatenated them at the beginning and the end of token sequences for each dimension, respectively.
+
+This process aims to mitigate undesired effects caused by artificial token overlap across codebooks during analysis.
+
+The analysis was performed on 10 hours of single-speaker speech data for English (LJSpeech\footnote{\url{https://keithito.com/LJ-Speech-Dataset/}}) and Mandarin (Chinese CSS10~\cite{Park2019CSS10AC})
+in order to investigate the language dependency of token.
+
+We used the manual transcriptions annotated to the corpora, and normalised through morphological analysis to obtain ground-truth (GT) word sequences for comparison.
+\vspace{-1mm}
