--- a/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
+++ b/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
@@ -219,3 +219,215 @@ in order to investigate the language dependency of token.
 
 We used the manual transcriptions annotated to the corpora, and normalised through morphological analysis to obtain ground-truth (GT) word sequences for comparison.
 \vspace{-1mm}
+
+## 4·Experimental Results
+
+\vspace{-1mm}
+
+### Language-based Statistical Analyses
+
+For the speech token sequences obtained in this study, we generated $n$-gram sequences with $n = \{2, 3, 4, 6\}$ and conducted a series of statistical and structural analyses.
+
+Specifically, we evaluated the properties of the token sequences for each model on Zipf's law~\cite{zipf1949human}, Heaps' law~\cite{heaps1978information}, and calculations of entropy~\cite{shannon1951prediction} and redundancy.
+
+Each token sequences were compared by the natural language baseline, which is a word 1-gram.
+
+#### Token Frequency Distribution and Fit to Zipf's Law
+
+In this experiment, we computed the frequency distributions of token $n$-grams extracted from various NAC models and evaluated their fit to Zipf's law~\cite{zipf1949human} by analysing their rank-frequency distributions on a log-log scale.
+
+For real-world data, when the tail is too heavy or too light, it is difficult to properly predict the shape of the data using general linear regression in Zipf's model~\cite{chan2024analyzinglanguagevisualtokens}.
+
+Thus, to robustly estimate the parameters of Zipf's law under such conditions, we employed the \texttt{powerlaw} library~\cite{clauset2009powerlaw}, which fits the rank-frequency data using the maximum likelihood estimate:
+\[
+\alpha = 1 + \frac{n}{\sum_{i=1}^{n} \log(x_i / x_{\min})},
+\]
+where \( x_i \) is the frequency of the \( i \)-th ranked token in the empirical distribution and \( x_{\min} \) works as a threshold, which is lower bound of the power-law behaviour in the rank-frequency distribution.
+
+Here, \( \alpha = \eta + 1 \).
+
+Values of \( \alpha \) approaching 2 indicate a close adherence to Zipf’s law.
+
+Also, the goodness-of-fit was evaluated using the Kolmogorov–Smirnov (KS) distance, where larger suggest deviation from linearity~\cite{KSdistance}.
+
+![](fig/en_zh_eta_vs_ks.pdf)
+
+<a id="fig:zipfs">Relationship between KS distance and Zipf's law exponent ($\alpha$) for NAC token sequences compared to natural language reference (word 1-gram) for (a) English and (b) Chinese.</a>
+
+![](fig/zipf_2x1_loglog_plot.png)
+
+<a id="fig:zipfs2">Comparison of $n$-gram distributions of the mean NAC token sequences with natural language reference (word 1-gram) for (a) English and (b) Chinese.</a>
+
+Figure~[fig:zipfs](#fig:zipfs) shows the results of the Zipf's law analysis. 
+In this figure, each small dot represents one NAC model configuration, while the large dots represent the mean position of each $n$-gram group, calculated by averaging $\alpha$ and KS values.
+
+Distances from each $n$-gram mean to the GT were calculated using Z-score normalisation and displayed in the figure legend.
+
+The token frequency and distribution including $\alpha$ and KS-distance values can be seen in Figure~[fig:zipfs2](#fig:zipfs2).
+
+For the mean NAC token, the entire token outputs from the model used in this study are stacked to represent the distribution of the entire token sequence in a single dimension, then divided by the total number of dimensions in the model, resulting in a normalized token with a codebook size of 1,024.
+
+It shows that 3-gram token sequences consistently provided the best fit across the NAC models, demonstrating the most linear behaviour and thus the strongest alignment with the Zipfian distribution.
+
+This indicates that, at the 3-gram level, NAC tokens exhibit a frequency distribution where high-frequency tokens are used relatively frequently while low-frequency tokens remain present, albeit at lower frequencies.
+
+This pattern holds for both English and Chinese data, as showing the linear distribution graph in Figure~[fig:zipfs2](#fig:zipfs2).
+
+#### Token Novelty and Vocabulary Growth
+
+To evaluate the novelty of speech tokens, we conducted analyses based on Heaps' law~\cite{heaps1978information}. 
+We analysed the natural language and the speech token sequences considering the token order, tracking the increase in unique tokens relative to the total number of tokens observed. 
+
+In Figure~[fig:heaps](#fig:heaps), we estimated both the scaling factor $k$ and the growth exponent $\beta$ for each model and $n$-gram setting.
+
+It is shown that 3-gram token sequences consistently display high similarities with those of natural language reference in both $k$ and $\beta$ values across both English and Chinese. 
+Additionally, the variability of cluster assignment across different models was found to be substantial, indicating that some models tend to group tokens in ways that exhibit higher volatility, as reflected in the spread of $k$ and $\beta$ estimates.
+
+The results indicated that token sequences with higher $k$ values tended to exhibit sublinear growth, indicating repeated reuse of common tokens and reduced diversity, as shown in Figure~[fig:heaps2](#fig:heaps2).
+
+Conversely, sequences with lower $k$ values displayed linear or near-linear growth, reflecting a more uniform introduction of new tokens. 
+Furthermore, we observed that as $n$ increased, the complexity and diversity of the data also increased, leading to less repetitive patterns and larger vocabulary sizes. 
+
+![](fig/en_zh_beta_vs_k.pdf)
+
+<a id="fig:heaps">Relationship between Heap’s law components $k$ and $\beta$ for NAC token sequences compared to natural language reference (word 1-gram) for (a) English and (b) Chinese.</a>
+
+![](fig/heaps_2x1_plot.pdf)
+
+<a id="fig:heaps2">Comparison of $n$-gram token vocabulary growth of the mean NAC token sequences with natural language reference (word 1-gram) for (a) English and (b) Chinese.</a>
+
+#### Analysis of Token Entropy and Redundancy
+
+![](fig/combined_ngram_vs_reduction_huffman.pdf)
+
+<a id="fig:entropy">Comparison of token bit reduction rates across different $n$-gram configurations for NAC model tokens versus natural language reference (word $n$-grams) for (a) English and (b) Chinese.
+
+The results for 1-gram NAC tokens are also shown.</a>
+
+Finally, we evaluated the entropy and compressibility of token sequences generated by NAC models and compared them with natural language sequences.
+
+Figure~[fig:entropy](#fig:entropy) shows the relationship between $n$-gram and the bit reduction rate.
+
+At the 1-gram level, natural language sequences exhibited a significantly higher bit reduction rate compared to NAC tokens.
+
+In contrast, NAC tokens displayed a relatively lower bit reduction rate at this level, suggesting a limited reuse of acoustic token patterns.
+
+The bit reduction rate tend to drop sharply from 1-gram to 2-gram for natural language, while rather increased for token sequences.
+
+Interestingly, at the 2-gram and 3-gram levels, NAC token sequences showed higher bit reduction rates than natural language.
+
+This indicates that, at these intermediate $n$-gram levels, NAC token sequences contained acoustic patterns that frequently repeated, leading to increased redundancy that could be efficiently compressed using Huffman coding.
+
+However, at higher $n$-gram levels (4-gram and above), the bit reduction rate of NAC token sequences decreased sharply and fell below that of natural language.
+
+This suggests that NAC token sequences become highly sparse at these higher $n$-gram levels, as tokens no longer exhibit repetitive structures but rather fragment into near-unique combinations. 
+These observations indicate that NAC token shows a high compression ratio in lower $n$-grams, but the effect decreases as $n$ becomes higher when modelling with more than 2-gram, in contrast to the natural language baseline.
+
+This difference indicates that NAC models may prioritize acoustic fidelity over statistical redundancy, resulting in less compressible token representations as $n$ gets bigger.
+
+Also, it can be observed that between 3-gram and 4-gram configurations, natural language and tokens exhibit similar bit reduction rates.
+
+This suggests that the following $n$-gram distribution shows similar token distributions between natural language words and tokens.
+
+\vspace{-1mm}
+
+### Comparison with Speech Performance Benchmarks
+
+\vspace{-1mm}
+
+This section investigates the relationship between the statistical properties of NAC tokens and speech performance benchmarks.
+
+We specifically examine whether tokens exhibiting more "language-like" statistics correlate with improved intelligibility (WER/CER) and naturalness (UTMOS).
+
+To evaluate this relationship, we used the Codec-SUPERB~\cite{codecsuperb} implementation to decode the NAC tokens back into speech waveforms, generating resynthesised speech outputs for each codec model under study. 
+For the intelligibility task, we then applied \texttt{whisper-medium}~\cite{radford2022whisper}
+
+ASR model, to transcribe the synthetic speech.
+
+By comparing these ASR outputs with the GT transcripts provided in the corpus, we calculated word error rate (WER) for English and character error rate (CER) for Chinese using the Levenshtein distance.
+
+This provided a quantitative measure of how closely the resynthesised speech aligns with the original linguistic content. 
+Also, we assessed the naturalness of the synthetic speech using UTMOS~\cite{saeki22c_interspeech}, speech quality assessment metric that estimates the perceived naturalness of speech based on neural network architectures trained on large-scale human-annotated datasets.
+
+By applying UTMOS to the resynthesised speech samples, we were able to derive pseudo-naturalness scores that reflect how naturally the speech would be perceived by listeners.
+
+These benchmarks collectively allow us to analyse whether the statistical regularities observed in token sequences meaningfully impact the performance of speech processing systems in real-world tasks.
+
+#### Zipf’s Law
+
+![](fig/combined_eta_vs_metrics.pdf)
+
+<a id="fig:Zipf_asr">Relationship between the 3-gram Zipf’s law exponent ($\alpha$) and (a) English WER, (b) Chinese CER, (c) English and (d) Chinese UTMOS for speech token sequences.
+
+Each point represents each codec configurations, color-coded by dimension size $n_d$.
+
+The trendline was obtained by Pearson correlation coefficient $r$.</a>
+
+We utilized 3-gram token sequences against the benchmarks to investigate the relationship between token frequency and the performances in downstream tasks. 
+
+Figure~[fig:Zipf_asr](#fig:Zipf_asr) shows scatter plots of $\alpha$ values derived from 3-gram token sequences against the benchmark performances.
+
+The results reveal a consistent trend: as $\alpha$ decreases, where approaching the Zipf's law's theoretical value of 2, error rates tend to decrease while UTMOS scores increase.
+
+In addition, it is showed that model configurations with large dimensions displayed lower error rates and higher UTMOS, while also demonstrating lower $\alpha$.
+
+This suggests that token sequences exhibiting Zipfian behaviour with high-frequency token usage correlate with improved speech recognition accuracy and perceived naturalness. 
+
+Interestingly, we observed that this trend was most clearly observed with 3-gram token sequences, while analyses with 2-gram and 4-gram configurations did not show the same consistent relationship between $\alpha$ and benchmark performances.\footnote{\label{note1}The exact values and graphs could not be included in the paper due to page limitations.}
+
+This observation suggests that 3-gram sequences may strike an optimal balance between capturing local linguistic patterns and maintaining token diversity, which in turn aligns well with both statistical regularity and acoustic information preservation.
+
+In contrast, 2-grams may be too short to adequately represent contextual dependencies, while 4-grams may introduce excessive sparsity and volatility in token usage.
+
+#### Heaps' Law
+
+![](fig/combined_beta_vs_metrics.pdf)
+
+<a id="fig:heap_asr">Relationship between the 3-gram Heap’s law exponent ($\beta$) and (a) English WER, (b) Chinese CER, (c) English and (d) Chinese UTMOS for speech token sequences.
+
+Each point represents each codec configurations, color-coded by dimension size $n_d$.
+
+The trendline was obtained by Pearson correlation coefficient $r$.</a>
+
+We analysed the correspondence between the Heaps' law exponent $\beta$ and $k$—estimated from 3-gram token sequences—and speech benchmarks.
+
+Figure~[fig:heaps](#fig:heaps) shows scatter plots of $\beta$ values against the benchmark performances.
+
+The results reveal a consistent trend: as $\beta$ approaches 1 (indicating a more linear growth of the vocabulary size with respect to the number of observed tokens), error rates (WER and CER) decrease, and UTMOS scores increase.
+
+It is also showed that model with a configurations of large dimensions displayed higher $\beta$.
+
+This finding suggests that token sequences exhibiting near-linear vocabulary growth—indicative of consistent token usage—correlate with improved speech recognition accuracy and perceived naturalness.
+
+This trend was robust across different $n$-gram configurations, with 2-grams to 6-grams consistently demonstrating that higher $\beta$ values align with better benchmark performances, except for a few outliers.
+
+This reinforces the conclusion that token sequences capturing stable vocabulary expansion contribute positively to both recognition and synthesis.
+
+Additionally, the scaling factor $k$ in the Heaps' law formulation was also found to play an important role\footnotemark[\value{footnote}].
+
+As $k$ approached 1, meaning that the model effectively captures each token's presence without excessive redundancy, error rates decreased and UTMOS scores improved. 
+These results collectively highlight that tokens adhering to linguistic patterns consistent with natural language. 
+
+#### Entropy
+
+![](fig/combined_reduction_vs_metrics.pdf)
+
+<a id="fig:entropy_asr">Relationship between the 3-gram token bit reduction rate and (a) English WER, (b) Chinese CER, (c) English and (d) Chinese UTMOS for speech token sequences.
+
+Each point represents each codec configurations, color-coded by dimension size $n_d$.
+
+The trendline was obtained by Pearson correlation coefficient.</a>
+
+We analysed the bit reduction rate derived from 3-gram token sequences and its relationship with speech quality benchmarks.
+
+Figure~[fig:entropy_asr](#fig:entropy_asr) presents scatter plots showing these relationships.
+
+The analysis reveals a consistent trend: as the bit reduction rate approaches zero—indicating that the token sequences are less compressible—error rates decrease and UTMOS scores increase.
+
+It is also showed that model with a configurations of large dimensions displayed lower bit reduction rate.
+
+This suggests that token sequences with lower redundancy and higher diversity are more closely aligned with the underlying structure of natural language and correspondingly support better speech quality.
+
+This pattern was also consistently observed across $n$-gram configurations from 2-grams to 6-grams\footnotemark[\value{footnote}], indicating that lower bit reduction rate across $n$-gram reliably correlate with improved recognition accuracy and higher perceived naturalness. 
+
+\vspace{-2mm}
